[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/PropertiesPanel.gd" id="1"]

[node name="PropertiesPanel" type="PanelContainer"]
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Rune Name"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Type: PROCESSOR"

[node name="DescLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "Description of the rune goes here."
fit_content = true


[node name="DeleteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Deconstruct (Delete)"

[connection signal="pressed" from="VBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
